--- a/EXE2/package.json
+++ b/EXE2/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mohammadhoseinmoradi/MohammadHosein_Moradi_Hw14_maktab45#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "sweetalert": "^2.1.2",
